# SerialProtocol

./: CMakeLists.txt  README.md
Inc/: common.hpp  crc16_modbus.hpp  main.hpp  serial_protocol_echo_linux.hpp  serial_protocol_linux.hpp  serial_protocol_linux_old.hpp
Src/: crc16_modbus.cpp  main.cpp  serial_protocol_echo_linux.cpp  serial_protocol_linux.cpp  serial_protocol_linux_old.cpp
